# ren

./: .gitignore  CMakeLists.txt  README.adoc  README.md  build.zig  package-lock.json  package.json  ren.zig
backend/: Cargo.toml  docker-compose.yml  http.sh  init.sql  start.sh
backend/src/: main.rs  routes.rs
backend/src/entity/: member.rs  mod.rs
backend/src/model/: history.rs  mod.rs  recipe.rs
backend/src/models/: history.rs  recipe.rs
backend/src/routes/: history.rs  mod.rs  recipe.rs
cicd/: build_frontend.sh
client/: Cargo.toml
client/src/: main.rs
client/src/components/: input.rs
client/src/routes/: home.rs  mod.rs
client/src/types/: meal.rs
docs/: README.adoc
example/: build.zig  build.zig.zon
example/src/: main.zig
frontend/: Cargo.toml  README.md  index.html  index.js  styles.scss
frontend/src/: app.rs  home.rs  main.rs
pages/: index.tsx
server/: .env  Cargo.toml  docker-compose.yml  run.sh
server/src/: main.rs
server/src/db/: basic.rs  mod.rs  model.rs
shaders/: shader.vert
src/: main.cpp  ren.cpp  ren.h  window.cpp
src/core/: math.h
src/rulkan/: buffer.cpp  buffer.hpp  command.cpp  command.hpp  device.cpp  device.hpp  instance.cpp  instance.h  instance.hpp  pipeline.cpp  pipeline.hpp  queue.cpp  queue.hpp  rulkan.cpp  rulkan.h  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  util.hpp  vertex.hpp
src/vulkan/: buffers.cpp  buffers.h  command_buffer.cpp  command_buffer.h  device.cpp  instance.cpp  pipeline.cpp  queue.cpp  queue.h  shaders.cpp  swap_chain.cpp  swap_chain.h  sync.cpp  sync.h  vertex.cpp  vertex.h  vulkan.cpp  vulkan.h
web/: package-lock.json  package.json
(+17 files in other folders)
