[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum_session = { version = "0.7.0", features = ["sqlite-rustls"] }
axum_session_auth = { version = "0.7.0", features = ["sqlite-rustls"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.33.0", features = ["full"] }
