[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
serde = "1.0.194"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres"] }
tokio = { version = "1.35.1", features = ["full"] }
